--- a/src/settings.json
+++ b/src/settings.json
@@ -1,7 +1,7 @@
 {
-	"ownerName": "Aprii",
-	"ownerNumber": "628811929177",
+	"ownerName": "Pannn.",
+	"ownerNumber": "6288227239317",
 	"apiKey": "udah gw kasih free tinggal make aja",
-	"namabot": "BOT INDO",
-	"fake": "_*BY BOT INDO, KETIK .allmenu JIKA TIDAK ADA BUTTON*_"
+	"namabot": "Nasyaaa",
+	"fake": "_*BY Nasyaaa, KETIK .allmenu JIKA TIDAK ADA BUTTON*_"
 }
